# PEP-Agent

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  Dockerfile  graph.py  ingest.py  main.py  pyproject.toml  scheduler.py  vectorstore.py
backend/data/: A_riplaan_taidetud.docx  BUS101.txt  BUS102.txt  BUS103.txt  BUS104.txt  BUS105.txt  BUS106.txt  BUS107.txt  BUS108.txt  BUS109.txt  BUS110.txt  BUS111.txt  BUS112.txt  BUS113.txt  BUS114.txt  BUS115.txt  ENG301.txt  ENG302.txt  ENG303.txt  ENG304.txt  ENG305.txt  ENG306.txt  ENG307.txt  ENG308.txt  ENG309.txt  ENG310.txt  ENG311.txt  ENG312.txt  ENG313.txt  ENG314.txt  ENG315.txt  IT201.txt  IT202.txt  IT203.txt  IT204.txt  IT205.txt  IT206.txt  IT207.txt  IT208.txt  IT209.txt  (+8 more)
frontend/src/app/: Calendar.tsx  ProfileForm.tsx  layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/courses/: route.ts
frontend_old/: Dockerfile  package-lock.json
frontend_old/src/app/: page.tsx
