[project]
name = "pep-agent-backend"
version = "0.1.0"
description = "LangGraph-powered agent backend for PEP-Agent (Azure OpenAI + Qdrant)"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.60",
    "langchain>=0.3.13",
    "langchain-openai>=0.2.14",
    "langchain-qdrant>=0.2.0",
    "langchain-community>=0.3.13",
    "qdrant-client>=1.12.0",
    "fastembed>=0.4.2",
    "docx2txt>=0.8",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.0",
]

[tool.uv]
package = false
